Fix alignment issue

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -58,6 +58,7 @@ li {
 .container {
   display: grid;
   grid-template-columns: 2fr 4fr 3fr;
+  align-items: start;
   gap: 24px;
   width: 1200px;
   margin: 48px auto;
